Fix: Enhance elevator control with nearest elevator dispatch and passenger capacity checks
- Added logic to dispatch the nearest elevator available in the requested direction.
- Implemented error handling for floor out-of-range and passenger overload scenarios.
- Updated console application to handle interactive commands for calling elevators and checking elevator statuses.
- Refactored `MoveToFloor` to manage elevator capacity checks and direction handling.
- Improved status display to show elevator floor, passenger count, and direction in response to user commands.

--- a/Elevator/appsettings.json
+++ b/Elevator/appsettings.json
@@ -1,6 +1,26 @@
 {
-  "ElevatorSettings": {
-    "NumberOfElevators": 3,
-    "NumberOfFloors": 5
+  "BuildingSettings": {
+    "TotalFloors": 10,
+    "ElevatorSettings": {
+      "ElevatorCount": 3,
+      "DefaultMaxPassengerCount": 5,
+      "DefaultMaxFloor": 10,
+      "Elevators": [
+        {
+          "Id": 1,
+          "MaxFloor": 8,
+          "MaxPassengerCount": 6
+        },
+        {
+          "Id": 2,
+          "MaxFloor": 10,
+          "MaxPassengerCount": 4
+        },
+        {
+          "Id": 3,
+          "MaxFloor": 10
+        }
+      ]
+    }
   }
 }
