--- a/Elevator/appsettings.json
+++ b/Elevator/appsettings.json
@@ -1,24 +1,63 @@
 {
   "BuildingSettings": {
-    "TotalFloors": 10,
     "ElevatorSettings": {
-      "ElevatorCount": 3,
-      "DefaultMaxPassengerCount": 5,
-      "DefaultMaxFloor": 10,
+      "TotalFloors": 7,
       "Elevators": [
         {
           "Id": 1,
-          "MaxFloor": 8,
-          "MaxPassengerCount": 6
+          "MaxFloor": 15,
+          "MaxPassengerCount": 5,
+          "MaxWeightCapacity": 800,
+          "SpeedInMillisecondsPerFloor": 800,
+          "Type": "Glass"
         },
         {
           "Id": 2,
-          "MaxFloor": 10,
-          "MaxPassengerCount": 4
+          "MaxFloor": 15,
+          "MaxPassengerCount": 5,
+          "MaxWeightCapacity": 800,
+          "SpeedInMillisecondsPerFloor": 800,
+          "Type": "Glass"
         },
         {
           "Id": 3,
-          "MaxFloor": 10
+          "MaxFloor": 15,
+          "MaxPassengerCount": 6,
+          "MaxWeightCapacity": 1000,
+          "SpeedInMillisecondsPerFloor": 900,
+          "Type": "Passenger"
+        },
+        {
+          "Id": 4,
+          "MaxFloor": 15,
+          "MaxPassengerCount": 6,
+          "MaxWeightCapacity": 1000,
+          "SpeedInMillisecondsPerFloor": 900,
+          "Type": "Passenger"
+        },
+        {
+          "Id": 5,
+          "MaxFloor": 15,
+          "MaxPassengerCount": 6,
+          "MaxWeightCapacity": 1000,
+          "SpeedInMillisecondsPerFloor": 900,
+          "Type": "Passenger"
+        },
+        {
+          "Id": 6,
+          "MaxFloor": 15,
+          "MaxPassengerCount": 6,
+          "MaxWeightCapacity": 1000,
+          "SpeedInMillisecondsPerFloor": 900,
+          "Type": "Passenger"
+        },
+        {
+          "Id": 7,
+          "MaxFloor": 15,
+          "MaxPassengerCount": 10,
+          "MaxWeightCapacity": 2000,
+          "SpeedInMillisecondsPerFloor": 1200,
+          "Type": "Freight"
         }
       ]
     }
